Fixed scrolling overflow and padding
I fixed it so when viewing on a smaller viewport the list does not flow
out of the div and the list container had too muc padding.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
     max-width: 175px;
 }
 #concert-list-container {
-    height: 75vh;
+    height: 65vh;
     overflow: auto;
 }
 #concert-list {
@@ -39,6 +39,7 @@ h1 {
 }
 #concert-list-item {
     padding: 0;
+    margin-right: 2px;
     list-style-type: none;
     list-style-position: inside;
     cursor: pointer;
@@ -48,21 +49,37 @@ h1 {
     height: 30px;
 }
 #list-overlay {
+    padding: 5px;
     position: absolute;
-    height: 91vh;
+    height: 90vh;
     opacity: 1.0;
     top: 40px;
-    left: 38px;
+    left: 39px;
     z-index: 2;
+    overflow: hidden;
 }
 #background {
     position: absolute;
-    height: 91vh;
+    height: 92vh;
     opacity: 0.8;
     top: 40px;
     left: 40px;
     background-color: #a6a6a6;
     z-index: 1;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 5px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 @media screen and (max-width: 980px) {
     h1, h4 {
